// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Default 1`] = `
<div
  className="App__Wrapper-hlrrig-3 kdgFTo"
>
  <h1
    className="App__Title-hlrrig-0 knrMkJ"
  >
    Cognitive Tests Boilerplate
  </h1>
  <div
    className="App__Area-hlrrig-1 dgSXVl"
  >
    <p
      className="App__Label-hlrrig-2 curani"
    >
      Authentication
    </p>
    <ul>
      <li>
        Loading...
      </li>
    </ul>
  </div>
  <div
    className="App__Area-hlrrig-1 dgSXVl"
  >
    <p
      className="App__Label-hlrrig-2 curani"
    >
      Sentry
    </p>
    <ul>
      <li>
        <a
          href="/api/admin/sentry-example"
        >
          Visit Here
        </a>
         to send an API request test error to Sentry.
      </li>
      <li>
        Click to trigger a client-side error:
      </li>
      <li>
        <button
          className="Button__ButtonWrapper-sc-8y2ppg-1 cEiPjO"
          onClick={[Function]}
          style={
            Object {
              "--button-background-color": "hsl(356deg, 74%, 57%)",
              "--button-background-color--hover": "hsl(356deg, 74%, 47%)",
              "--button-color": "hsl(0deg, 0%, 100%)",
              "--button-cursor": "pointer",
              "--button-width": "100%",
              "--children-opacity": 1,
            }
          }
        >
          <div
            className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
          >
            Trigger
          </div>
        </button>
      </li>
    </ul>
  </div>
  <div
    className="App__Area-hlrrig-1 dgSXVl"
  >
    <p
      className="App__Label-hlrrig-2 curani"
    >
      Storybook
    </p>
    <a
      href="https://willthevideoman.github.io/cog-tests-boilerplate/"
    >
      Visit Here
    </a>
     to see the Storybook Docs.
  </div>
  <div
    className="App__Area-hlrrig-1 dgSXVl"
  >
    <p
      className="App__Label-hlrrig-2 curani"
    >
      Deployment Pipeline
    </p>
    <ul>
      <li>
        Linting from ESLint
      </li>
      <li>
        Formatting from Prettier
      </li>
      <li>
        Testing from Jest
      </li>
      <li>
         Hosting from Vercel
      </li>
      <li>
        Data from FaunaDB
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Button As Link 1`] = `
<a
  className="Button__LinkWrapper-sc-8y2ppg-0 cZZizN"
  disabled={false}
  href="/"
  style={
    Object {
      "--button-background-color": "hsl(251deg, 83%, 70%)",
      "--button-background-color--hover": "hsl(251deg, 83%, 60%)",
      "--button-color": "hsl(0deg, 0%, 100%)",
      "--button-cursor": "pointer",
      "--button-width": "fit-content",
      "--children-opacity": 1,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    This is a Link
  </div>
</a>
`;

exports[`Storyshots Button Confirm 1`] = `
<button
  className="Button__ButtonWrapper-sc-8y2ppg-1 cEiPjO"
  disabled={false}
  style={
    Object {
      "--button-background-color": "hsl(121deg, 90%, 86%)",
      "--button-background-color--hover": "hsl(121deg, 90%, 76%)",
      "--button-color": "hsl(0deg, 0%, 20%)",
      "--button-cursor": "pointer",
      "--button-width": "fit-content",
      "--children-opacity": 1,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    Confirm
  </div>
</button>
`;

exports[`Storyshots Button Danger 1`] = `
<button
  className="Button__ButtonWrapper-sc-8y2ppg-1 cEiPjO"
  disabled={false}
  style={
    Object {
      "--button-background-color": "hsl(356deg, 74%, 57%)",
      "--button-background-color--hover": "hsl(356deg, 74%, 47%)",
      "--button-color": "hsl(0deg, 0%, 100%)",
      "--button-cursor": "pointer",
      "--button-width": "fit-content",
      "--children-opacity": 1,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    Danger
  </div>
</button>
`;

exports[`Storyshots Button Default 1`] = `
<button
  className="Button__ButtonWrapper-sc-8y2ppg-1 cEiPjO"
  disabled={false}
  style={
    Object {
      "--button-background-color": "hsl(251deg, 83%, 70%)",
      "--button-background-color--hover": "hsl(251deg, 83%, 60%)",
      "--button-color": "hsl(0deg, 0%, 100%)",
      "--button-cursor": "pointer",
      "--button-width": "fit-content",
      "--children-opacity": 1,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    Default
  </div>
</button>
`;

exports[`Storyshots Button Full Width 1`] = `
<button
  className="Button__ButtonWrapper-sc-8y2ppg-1 cEiPjO"
  disabled={false}
  style={
    Object {
      "--button-background-color": "hsl(251deg, 83%, 70%)",
      "--button-background-color--hover": "hsl(251deg, 83%, 60%)",
      "--button-color": "hsl(0deg, 0%, 100%)",
      "--button-cursor": "pointer",
      "--button-width": "100%",
      "--children-opacity": 1,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    Full Width
  </div>
</button>
`;

exports[`Storyshots Button Inactive 1`] = `
<button
  className="Button__ButtonWrapper-sc-8y2ppg-1 cEiPjO"
  disabled={true}
  style={
    Object {
      "--button-background-color": "hsl(0deg, 0%, 80%)",
      "--button-background-color--hover": "hsl(0deg, 0%, 80%)",
      "--button-color": "hsl(0deg, 0%, 20%)",
      "--button-cursor": "not-allowed",
      "--button-width": "fit-content",
      "--children-opacity": 1,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    Inactive
  </div>
</button>
`;

exports[`Storyshots Button Loading 1`] = `
<button
  className="Button__ButtonWrapper-sc-8y2ppg-1 cEiPjO"
  disabled={false}
  style={
    Object {
      "--button-background-color": "hsl(251deg, 83%, 70%)",
      "--button-background-color--hover": "hsl(251deg, 83%, 60%)",
      "--button-color": "hsl(0deg, 0%, 100%)",
      "--button-cursor": "wait",
      "--button-width": "fit-content",
      "--children-opacity": 0,
    }
  }
>
  <div
    className="Button__ChildrenWrapper-sc-8y2ppg-2 eEPhFo"
  >
    Loading
  </div>
  <div
    className="Button__SpinnerWrapper-sc-8y2ppg-3 kTYYTi"
  >
    <div
      className="Spinner__Wrapper-gyi5eh-0 frxYSt"
      style={
        Object {
          "--spinner-size": "24px",
        }
      }
    >
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-1.1s",
            "--blip-rotation": "30deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-1s",
            "--blip-rotation": "60deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.9s",
            "--blip-rotation": "90deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.8s",
            "--blip-rotation": "120deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.7s",
            "--blip-rotation": "150deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.6s",
            "--blip-rotation": "180deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.5s",
            "--blip-rotation": "210deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.4s",
            "--blip-rotation": "240deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.3s",
            "--blip-rotation": "270deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.2s",
            "--blip-rotation": "300deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "-0.1s",
            "--blip-rotation": "330deg",
          }
        }
      />
      <div
        className="Spinner__Blip-gyi5eh-1 beoFab"
        style={
          Object {
            "--blip-animation-delay": "0s",
            "--blip-rotation": "0deg",
          }
        }
      />
    </div>
  </div>
</button>
`;

exports[`Storyshots Spinner Default 1`] = `
<div
  className="Spinner__Wrapper-gyi5eh-0 frxYSt"
  style={
    Object {
      "--spinner-size": "24px",
    }
  }
>
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-1.1s",
        "--blip-rotation": "30deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-1s",
        "--blip-rotation": "60deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.9s",
        "--blip-rotation": "90deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.8s",
        "--blip-rotation": "120deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.7s",
        "--blip-rotation": "150deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.6s",
        "--blip-rotation": "180deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.5s",
        "--blip-rotation": "210deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.4s",
        "--blip-rotation": "240deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.3s",
        "--blip-rotation": "270deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.2s",
        "--blip-rotation": "300deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "-0.1s",
        "--blip-rotation": "330deg",
      }
    }
  />
  <div
    className="Spinner__Blip-gyi5eh-1 beoFab"
    style={
      Object {
        "--blip-animation-delay": "0s",
        "--blip-rotation": "0deg",
      }
    }
  />
</div>
`;

exports[`Storyshots TextInput Default 1`] = `
<div
  className="TextInput__Wrapper-sc-5gm92g-0 dIStPG"
  style={
    Object {
      "--input-border-color": "hsl(0deg, 0%, 40%)",
      "--input-border-color--hover": "hsl(0deg, 0%, 20%)",
      "--input-color": "hsl(0deg, 0%, 20%)",
      "--input-color--error": "hsl(356deg, 74%, 52%)",
      "--input-placeholder-color": "hsl(0deg, 0%, 60%)",
    }
  }
>
  <label
    className="TextInput__FormLabel-sc-5gm92g-1 jaMEGt"
    htmlFor="email"
  >
    Email Address
  </label>
  <input
    className="TextInput__Input-sc-5gm92g-2 bNrYpa"
    disabled={false}
    name="email"
    placeholder="joe@smith.com"
    type="email"
    value=""
  />
</div>
`;

exports[`Storyshots TextInput Inactive 1`] = `
<div
  className="TextInput__Wrapper-sc-5gm92g-0 dIStPG"
  style={
    Object {
      "--input-border-color": "hsl(0deg, 0%, 60%)",
      "--input-border-color--hover": "hsl(0deg, 0%, 60%)",
      "--input-color": "hsl(0deg, 0%, 60%)",
      "--input-color--error": "hsl(0deg, 0%, 60%)",
      "--input-cursor": "not-allowed",
      "--input-placeholder-color": "hsl(0deg, 0%, 60%)",
    }
  }
>
  <label
    className="TextInput__FormLabel-sc-5gm92g-1 jaMEGt"
    htmlFor="email"
  >
    Email Address
  </label>
  <input
    className="TextInput__Input-sc-5gm92g-2 bNrYpa"
    disabled={true}
    name="email"
    placeholder="joe@smith.com"
    type="email"
    value=""
  />
</div>
`;

exports[`Storyshots Wave Default 1`] = `
<svg
  className="Wave__SVG-sc-14esvht-0 hZSGlQ"
  style={
    Object {
      "--svg-transform-rotate": "rotate(0deg)",
    }
  }
  version="1.1"
  viewBox="0 90 800 310"
  width="100%"
>
  <defs>
    <linearGradient
      gradientTransform="rotate(90)"
      id="linear"
    >
      <stop
        offset="50%"
        stopColor="hsl(23deg, 100%, 96%)"
      />
      <stop
        offset="95%"
        stopColor="hsl(251deg, 83%, 96%)"
      />
    </linearGradient>
  </defs>
  <g>
    <path
      d=" M 0 250  C 400 300 400 50 800 100  L 800 400 L 0 400 Z "
      style={
        Object {
          "fill": "url(#linear)",
          "stroke": "none",
        }
      }
    />
  </g>
</svg>
`;

exports[`Storyshots Wave Flip 1`] = `
<svg
  className="Wave__SVG-sc-14esvht-0 hZSGlQ"
  style={
    Object {
      "--svg-transform-rotate": "rotate(180deg)",
    }
  }
  version="1.1"
  viewBox="0 90 800 310"
  width="100%"
>
  <defs>
    <linearGradient
      gradientTransform="rotate(90)"
      id="linear"
    >
      <stop
        offset="50%"
        stopColor="hsl(23deg, 100%, 96%)"
      />
      <stop
        offset="95%"
        stopColor="hsl(251deg, 83%, 96%)"
      />
    </linearGradient>
  </defs>
  <g>
    <path
      d=" M 0 250  C 400 300 400 50 800 100  L 800 400 L 0 400 Z "
      style={
        Object {
          "fill": "url(#linear)",
          "stroke": "none",
        }
      }
    />
  </g>
</svg>
`;
